# Troj-MCP

./: .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION_LIMITATIONS.md  Dockerfile  Makefile  README.md  RELEASE.md  docker-compose.yml  env.example  main.py  main_stdio.py  pyproject.toml  requirements.txt  run_mcp_server.sh  run_tests.py  test_ci_pipeline.py  test_manual.py  test_stdio.py
.github/workflows/: ci-cd.yml  ci.yml
scripts/: check_coverage.py  check_status_checks.sh  disable_branch_protection.sh  setup.sh  setup_branch_protection.sh  setup_branch_protection_manual.sh  setup_branch_protection_simple.sh  setup_release.sh  update_branch_protection.sh
src/macro_man/: __init__.py
src/macro_man/config/: __init__.py  settings.py
src/macro_man/core/: __init__.py  server.py
src/macro_man/tools/: __init__.py  basic.py  calendar.py  email.py  file_ops.py  system.py
src/macro_man/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  test_basic_tools.py  test_basic_tools_simple.py  test_calendar_tools.py  test_components.py  test_email_tools.py  test_file_ops.py  test_mcp_integration.py  test_server_coverage.py  test_system_tools.py  test_system_tools_coverage.py
